# typely

./: .gitignore  Cargo.toml  Makefile  README.md  test.db  test2.db
.github/workflows/: deploy.yml  release.yml
backend/: Cargo.toml  README.md  lib.rs
backend/app/: mod.rs
backend/app/dto/: mod.rs
backend/app/services/: create_snippet.rs  delete_snippet.rs  expand_snippet.rs  expansion_service.rs  export_snippets.rs  get_snippet.rs  import_snippets.rs  list_snippets.rs  mod.rs  typely_service.rs  update_snippet.rs
backend/cli/: commands.rs  main.rs
backend/domain/: mod.rs
backend/domain/entities/: events.rs  expansion.rs  mod.rs  query.rs  snippet.rs  triggers.rs
backend/domain/repositories/: mod.rs
backend/infra/: mod.rs  system.rs
backend/infra/database/: connection.rs  migrations.rs
backend/infra/engine/: keyboard_event_handler.rs  mod.rs  text_expansion_engine.rs
backend/infra/repositories/: mod.rs  sqlite_snippet_repository.rs
backend/scripts/: install.sh  uninstall.sh
clients/cli/: Cargo.toml  commands.rs  lib.rs  main.rs
clients/frontend/: index.html
clients/gui/: Cargo.toml  tauri.conf.json
clients/gui/src/: main.rs
clients/landing-page/: CNAME  index.html
docs/: README.md  architecture.md  cli-reference.md  faq.md  getting-started.md  troubleshooting.md
examples/: README.md  advanced-snippets.json  basic-snippets.json  programming-snippets.json  snippets.json  work-snippets.json
src/: main.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/application/: mod.rs
src/application/services/: mod.rs  typely_service.rs
src/application/use_cases/: create_snippet.rs  delete_snippet.rs  expand_snippet.rs  export_snippets.rs  get_snippet.rs  import_snippets.rs  list_snippets.rs  mod.rs  update_snippet.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  snippet.rs
src/domain/events/: mod.rs
src/domain/services/: mod.rs  trigger_detection_service.rs
src/domain/value_objects/: expansion_result.rs  mod.rs  snippet_query.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: connection.rs
src/infrastructure/repositories/: sqlite_snippet_repository.rs
src/infrastructure/system/: clipboard_manager.rs  input_simulator.rs  keyboard_monitor.rs  mod.rs  stub.rs
src/presentation/: mod.rs
src/presentation/cli/: args.rs  commands.rs  main.rs
src/presentation/engine/: keyboard_event_handler.rs  mod.rs  text_expansion_engine.rs
tests/integration/: cli_tests.rs
