[workspace]
members = ["backend", "clients/cli", "clients/gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Typely Team"]
license = "MIT"
repository = "https://github.com/typely/typely"
edition = "2021"

[workspace.dependencies]
# Core dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
console = "0.15"

# Utilities
dirs = "5.0"
regex = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
async-trait = "0.1"

# Testing
tempfile = "3.0"
assert_matches = "1.5"
tokio-test = "0.4"