[package]
name = "typely"
version = "0.1.0"
edition = "2021"
authors = ["Typely Team"]
description = "Cross-platform text expansion tool"
license = "MIT"
repository = "https://github.com/typely/typely"

[[bin]]
name = "typely"
path = "bin/main.rs"

[lib]
name = "typely"
path = "lib.rs"

[dependencies]
# Core dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
console = "0.15"

# System integration for text expansion (optional for headless environments)
rdev = { version = "0.4", optional = true }
enigo = { version = "0.2", optional = true }
clipboard = { version = "0.5", optional = true }

# Utilities
dirs = "5.0"
regex = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"

# Async trait support
async-trait = "0.1"

# Testing
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_matches = "1.5"

[features]
default = ["cli-only"]
cli-only = []
system-integration = ["rdev", "enigo", "clipboard"]